# mochi-flashcard-uploader

./: .env.example  .gitignore  README.md  pyproject.toml
mochi_flashcard_uploader/: client.py  models.py  uploader.py
mochi_flashcard_uploader/mochi_uploader/: client.py  models.py  uploader.py
mochi_flashcard_uploader/topics/data-structures/arrays/: product-of-array.md
