[tool.poetry]
name = "mochi-flashcard-uploader"
version = "0.1.0"
description = "A tool to upload markdown-formatted flashcards to Mochi"
authors = ["Dominic Hawton <hello@dominichawton.com>"]

[tool.poetry.scripts]
mochi-upload = "mochi_uploader.uploader:app"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
pydantic = "^2.5.2"
typer = "^0.9.0"
rich = "^13.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.1"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"